<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_gameLevels_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fon"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/game_levels_background_image" />

    <LinearLayout
        android:id="@+id/container_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/container_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    style="@style/StyleButton_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_back"
                    android:textAllCaps="false" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/container_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_one" />

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_two" />

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_free" />

                        <TextView
                            android:id="@+id/textView4"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_fore" />

                        <TextView
                            android:id="@+id/textView5"
                            style="@style/StyleButton_2"
                            android:text="@string/btn_five" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_six" />


                        <TextView
                            android:id="@+id/textView7"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_seven" />

                        <TextView
                            android:id="@+id/textView8"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_eight" />

                        <TextView
                            android:id="@+id/textView9"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_nine" />

                        <TextView
                            android:id="@+id/textView10"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_ten" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView11"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_eleven" />


                        <TextView
                            android:id="@+id/textView12"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_twelve" />

                        <TextView
                            android:id="@+id/textView13"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_thirteen" />

                        <TextView
                            android:id="@+id/textView14"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_fourteen" />

                        <TextView
                            android:id="@+id/textView15"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_fifteen" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView16"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_sixteen" />


                        <TextView
                            android:id="@+id/textView17"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_seventeen" />

                        <TextView
                            android:id="@+id/textView18"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_eighteen" />

                        <TextView
                            android:id="@+id/textView19"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_nineteen" />

                        <TextView
                            android:id="@+id/textView20"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_twenty" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView21"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_twentyOne" />


                        <TextView
                            android:id="@+id/textView22"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_twentyTwo" />

                        <TextView
                            android:id="@+id/textView23"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_twentyFree" />

                        <TextView
                            android:id="@+id/textView24"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_twentyFore" />

                        <TextView
                            android:id="@+id/textView25"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_twentyFive" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView26"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_twentySix" />


                        <TextView
                            android:id="@+id/textView27"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_twentySeven" />

                        <TextView
                            android:id="@+id/textView28"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_twentyEight" />

                        <TextView
                            android:id="@+id/textView29"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_twentyNine" />

                        <TextView
                            android:id="@+id/textView30"
                            style="@style/StyleButton_2"
                            android:layout_marginEnd="@dimen/layout_marginRight_15dp"
                            android:text="@string/btn_thirty" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>